# alx

./: .gitmodules  AUTHORS  CMakeLists.txt  LICENSE
.github/workflows/: c-cpp.yml
alx/: CMakeLists.txt
alx/lce/: CMakeLists.txt  lce_classic.hpp  lce_classic_for_sss.hpp  lce_fp.hpp  lce_memcmp.hpp  lce_naive.hpp  lce_naive_block.hpp  lce_naive_std.hpp  lce_naive_wordwise.hpp  lce_naive_wordwise_xor.hpp  lce_rk_prezza.hpp  lce_sdsl_cst.hpp  lce_sss.hpp  lce_sss_naive.hpp  lce_sss_noss.hpp
alx/pred/: CMakeLists.txt  binsearch_std.hpp  j_index.hpp  pgm_index.hpp  pred_index.hpp  pred_result.hpp
alx/rmq/: CMakeLists.txt  rmq_n.hpp  rmq_naive.hpp  rmq_nlgn.hpp
alx/rolling_hash/: CMakeLists.txt  mersenne_modular_arithmetic.hpp  modular_arithmetic.hpp  reduce_fingerprints.hpp  ring_buffer.hpp  rolling_hash.hpp  string_synchronizing_set.hpp
alx/suffix_sort/: CMakeLists.txt
alx/util/: CMakeLists.txt  io.hpp  rolling_hash.hpp  timer.hpp
extlib/: CMakeLists.txt
src/: CMakeLists.txt
src/lce/: CMakeLists.txt  benchmark.cpp  genqueries.cpp
src/pred/: CMakeLists.txt  benchmark.cpp  gen_sss.cpp
src/suffix_sort/: CMakeLists.txt  benchmark.cpp
tests/: CMakeLists.txt
tests/lce/: CMakeLists.txt  test_lce.cpp
tests/pred/: CMakeLists.txt  test_pred.cpp
tests/rmq/: CMakeLists.txt  test_rmq.cpp
tests/rolling_hash/: CMakeLists.txt  test_rolling_hash.cpp  test_string_synchronizing_set.cpp
