add_library(alx_mersenne_modular_arithmetic INTERFACE)
target_include_directories(alx_mersenne_modular_arithmetic INTERFACE ${ALX_INCLUDE_DIR})

add_library(alx_modular_arithmetic INTERFACE)
target_include_directories(alx_modular_arithmetic INTERFACE ${ALX_INCLUDE_DIR})
target_link_libraries(alx_modular_arithmetic INTERFACE hurchalla_modular_arithmetic)

add_library(alx_rolling_hash INTERFACE)
target_include_directories(alx_rolling_hash INTERFACE ${ALX_INCLUDE_DIR})
target_link_libraries(alx_rolling_hash INTERFACE alx_modular_arithmetic alx_mersenne_modular_arithmetic)
