add_executable(benchmark_ss benchmark.cpp)
target_link_libraries(benchmark_ss PRIVATE alx_lce tlx_clp fmt::fmt-header-only)

if(ALX_BENCHMARK_PARALLEL)
  target_compile_definitions(benchmark_ss PRIVATE -DALX_BENCHMARK_PARALLEL)
  target_link_libraries(benchmark_ss PRIVATE OpenMP::OpenMP_CXX)
endif()
if(ALX_BENCHMARK_SPACE)
  target_compile_definitions(benchmark_ss PRIVATE -DALX_BENCHMARK_SPACE)
  target_link_libraries(benchmark_ss PRIVATE malloc_count)
endif()
if(ALX_BENCHMARK_INTERNAL)
  target_compile_definitions(benchmark_ss PRIVATE -DALX_BENCHMARK_INTERNAL)
endif()
